@@ -2,6 +2,12 @@ Makefile
 Makefile.in
 aclocal.m4
 autom4te.cache
+config.guess
 config.log
 config.status
+config.sub
 configure
+depcomp
+install-sh
+missing
+mkinstalldirs
