@@ -1,5 +1,6 @@
-# $Id: Makefile.am,v 1.2 2004-10-23 14:15:20 freddy Exp $
-bin_PROGRAMS   =    shtunnel
+# $Id: Makefile.am,v 1.3 2006-03-24 18:51:00 freddy Exp $
+bin_PROGRAMS   =   shtunnel classifier
 
+classifier_SOURCES = classifier.c config.h sshtty.c sshpty.c sshpty.h includes.h bsd-openpty.c
 shtunnel_SOURCES = shtunnel.c config.h sshtty.c sshpty.c sshpty.h includes.h bsd-openpty.c
 
